# forge

./: .env.example  .gitignore  FORGE_EVOLUTION.md  HACKATHON.md  README.md  SECURITY_ARCHITECTURE.md  SUNDAI_QUICKSTART.md  pyproject.toml  requirements.txt  setup.sh
docs/: a2a-protocol.md  adk-integration.md  agents.md  architecture.md
src/: __init__.py  builder.py  cli.py  config.py  context.py  deployer.py  dev_server.py  knowledge.py  orchestrator.py  providers.py  sprint.py  state.py
src/a2a/: __init__.py  client.py  server.py  types.py
src/adk/: __init__.py  agent_runner.py  llm_bridge.py  orchestrator_agent.py  tools.py
src/agents/: __init__.py  backend.py  base.py  ci_cd.py  coder.py  deploy.py  frontend.py  planner.py  reviewer.py  security_agent.py
src/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai_compat.py
src/security/: firewall.py
templates/ai-app/.forge/: deploy.md  prompts.md  rules.md  spec.md
templates/api-only/.forge/: deploy.md  prompts.md  rules.md  spec.md
templates/chrome-ext/.forge/: deploy.md  prompts.md  rules.md  spec.md
templates/cli-tool/.forge/: deploy.md  prompts.md  rules.md  spec.md
templates/common/: firewall_policy.json  pitch.md  security_pitch.md
templates/data-viz/.forge/: deploy.md  prompts.md  rules.md  spec.md
templates/discord-bot/.forge/: deploy.md  prompts.md  rules.md  spec.md
templates/slack-bot/.forge/: deploy.md  prompts.md  rules.md  spec.md
templates/web-app/.forge/: demo-checklist.md  deploy.md  prompts.md  rules.md  spec.md
