[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-ai"
version = "0.1.0"
description = "AI-agnostic project builder - describe what you want, any AI builds and deploys it"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "code-generation", "automation", "deployment"]
authors = [
    {name = "Your Name", email = "you@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
google = ["google-generativeai>=0.3.0"]
all = [
    "google-generativeai>=0.3.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
forge = "src.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/forge"
Repository = "https://github.com/yourusername/forge"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
