[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-ai"
version = "0.1.0"
description = "Project scaffolding for LLM-assisted development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "llm", "scaffolding", "project-setup"]
authors = [
    {name = "Sundai Club"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
demo = ["qrcode[pil]>=7.0"]
dev = ["pytest>=7.0"]

[project.scripts]
forge = "src.cli:main"

[project.urls]
Homepage = "https://github.com/sundai-club/forge"
Repository = "https://github.com/sundai-club/forge"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "templates*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.yml"]
